[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
reqwest = { version = "0.11.23", default-features = false, features = ["json"] }
schema = { path = "../schema" }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
